fixed the alignment of agency selector columns on Chrome

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_agency_overlay.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_agency_overlay.scss
@@ -31,7 +31,7 @@ $grid-size: 40px;
   }
 
   .agency-item {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
     break-inside: avoid;
